--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "author": "Daniel Luca (CleanUnicorn)",
   "license": "Apache-2.0",
   "dependencies": {
+    "express": "^4.18.2",
     "typescript": "^4.9.4",
     "ws": "^8.11.0"
   },
