--- a/provider/package.json
+++ b/provider/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "client",
+  "name": "provider",
   "version": "1.0.0",
-  "description": "Local RPC Client that relays messages to the Nym network",
   "main": "index.js",
   "author": "Daniel Luca (CleanUnicorn)",
   "license": "Apache-2.0",
   "dependencies": {
     "@types/node": "^18.11.18",
-    "express": "^4.18.2",
+    "axios": "^1.2.2",
     "typescript": "^4.9.4",
     "ws": "^8.11.0"
   },
   "scripts": {
-    "build": "tsc",
-    "start": "npm run build && node dist/index.js"
+    "start": "npm run build && node dist/index.js",
+    "build": "tsc"
   }
 }
