--- a/provider/package.json
+++ b/provider/package.json
@@ -11,7 +11,16 @@
     "ws": "^8.11.0"
   },
   "scripts": {
+    "build": "tsc",
     "start": "npm run build && node dist/index.js",
-    "build": "tsc"
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
+    "eslint": "^8.31.0",
+    "prettier": "^2.8.1"
   }
 }
